* Sun Apr 18 2010 Eric S. Raymond <esr@snark.thyrsus.com> - 2.94~dev
  Error-checking in the 50bps aubframe code has been greatly improved.
  The Garmin GPS driver can now use libusb, if it is present, to do
  device discovery.

* Fri Apr 16 2010 Eric S. Raymond <esr@snark.thyrsus.com> - 2.93
  Support for JSON dumping and parsing of AIS message types 25 and 26,
  not yet observed in the wild on AISHub. Fix Debian bug #569703.  by
  removing non-streaming mode from the Python exerciser. Fix Debian
  bug #572900 by unsetting the appropriate in-use flag in the device
  array.  Change the libgps default from old protocol to JSON. Add a
  close() method to the C++ binding. Try to recover better from
  sporadic cases of false matches to Trimble packet format from a SiRF
  binary datastream. gps_poll() now returns -1 with errno not set when
  the gpsd socket closes. TPV now refrains from reporting fields the
  fix quality won't support. gpsmon option for listing device types is
  now -L to -l can be used to enable logging (to stay consistent with
  the l command). There is new FAQ material on improving fix and time
  reference accuracy. New sections have been added to NMEA.txt on
  error status indications and satellite IDs.  New POLL command brings
  back polling-mode operation.  A Client-HOWTO has been added to the
  documentation. gpsd no longer eats CPU when a device is unexpectedly
  unplugged. Support for the TNT revolution is back (run mode only).
  There is now a gpsdfake diagnostic tool that fakes being gpsd shipping
  arbitrary specified data to clients.

* Wed Mar 3 2010 Eric S. Raymond <esr@snark.thyrsus.com> - 2.92
  Fix a packaging error.  The new Python library module was
  inadvertently omitted from the 2.91 tarball.  Also, improve the json
  import test slightly.

* Mon Mar 1 2010 Eric S. Raymond <esr@snark.thyrsus.com> - 2.91
  We have support for NMEA GLONASS sentences, and a regression test.